--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">
-                    Alerta <b>#<span id="id"></span></b>
+                    Alerta
+                    <b>#<span id="id"></span></b>
                 </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"></span>
@@ -50,7 +51,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+                <div class="btn-group pe-5 me-5" role="group" aria-label="Basic radio toggle button group">
                     <input type="radio" class="btn-check" name="status" id="pending" autocomplete="off">
                     <label class="btn btn-outline-primary" for="pending">Pendiente</label>
 
@@ -63,8 +64,8 @@
                     <input type="radio" class="btn-check" name="status" id="cancel" autocomplete="off">
                     <label class="btn btn-outline-primary" for="cancel">Cancelado</label>
                 </div>
-                <button type="button" class="btn btn-primary" id="save">Guardar</button>
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary ms-5" id="save">Guardar</button>
+                <button type="button" class="btn btn-danger ms-3" data-bs-dismiss="modal">Cancelar</button>
             </div>
         </div>
     </div>
