--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
     </div>
 </div>
 
+<div id="loading">
+    <div>Cargando...</div>
+</div>
+
 <!--Firebase -->
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-analytics.js"></script>
