--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="col-md-9" id="map"></div>
         <div class="col-md-3">
             <div class="title">
-                Alertas
+                Listado de Alertas
             </div>
             <div class="items">
                 <ol class="list"></ol>
